@@ -9,11 +9,6 @@
         affect_allies=yes
         [affect_adjacent]
             adjacent=n,ne,se,s,sw,nw
-            [filter]
-                [not]
-                    type=Wesfolk Outcast,Wesfolk Lady,Wesfolk Leader
-                [/not]
-            [/filter]
         [/affect_adjacent]
     [/skirmisher]
 #enddef
