@@ -41,6 +41,8 @@ Version 1.11.4+dev:
      swapped.
    * Fixed incorrect image path function name in error messages generated by
      using ~CROP() with negative coordinates.
+   * Fixed abilities sometimes affecting self during movement even when they are
+     flagged as not affecting self (bug #20755).
  * Miscellaneous and bug fixes
    * Fixed minor issue with Drake Clasher animations
    * Added a new playlist FULL_MUSIC_PLAYLIST, which contains all Wesnoth tracks
